<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.login.RegisterNewUser"
    android:background="@drawable/login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="159dp"
        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newUser_text_userName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/username"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_marginTop="10dp"

            android:textColor="#FFFFFF"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/newUser_text_email"
            android:layout_below="@+id/newUser_text_userName"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_address"
            android:gravity="center"
            android:layout_marginTop="10dp"

            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newUser_text_password"
            android:layout_below="@+id/newUser_text_email"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newUser_text_confirmPassword"
            android:layout_below="@+id/newUser_text_password"
            android:layout_centerHorizontal="true"
            android:hint="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:textColor="#FFFFFF"/>

        <ImageButton
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:text="@string/register"
            android:id="@+id/newUser_button_register"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:onClick="registerNewUser"
            android:layout_marginTop="10dp"
            android:src="@drawable/regisimage"/>
    </RelativeLayout>
</RelativeLayout>
